apps/base/memos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memos
  labels:
    goldilocks.fairwinds.com/enabled: "true"
  # labels adicionales disponibles:
  #   k8s.dimarco-server.site/scrape: "true"
